# Minesweeper

./: .coverage  .pylintrc  README.md  minesweeper.py  pyproject.toml  requirements  tasks.py
dokumentaatiot/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: .coverage  clock.py  event.py  minesweeper.py  solver_bot.py  tasks.py  tester.py  ui.py
src/tests/: minesweeper_test.py  pyproject.toml
viikkoraportit/viikko1/: raportti1.md
viikkoraportit/viikko2/: raportti2.md
viikkoraportit/viikko3/: raportti3  raportti3.md
viikkoraportit/viikko4/: raportti4.md
viikkoraportit/viikko5/: raportti5  raportti5.md
viikkoraportit/viikko6/: raportti6.md
