[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = ["Nana Reinikainen <nana.reinikainen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.8.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
